# HiGal_SEDfitter

./: .travis.yml  README.rst  pip-requirements  setup.cfg  setup.py
docs/: conf.py  index.rst  rtd-pip-requirements
docs/higal_sedfitter/: index.rst
docs/packagename/: index.rst
higal_sedfitter/: __init__.py  fit.py  higal_beams.py  smooth.py  wrapper.py
higal_sedfitter/tests/: test_sedfit.py
packagename/: __init__.py
