[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[metadata]
package_name = higal_sedfitter
description = Hi-Gal SED Fitter
long_description = Tool for fitting SEDs to HiGal data
author = Adam Ginsburg
author_email = adamgginsburg@gmail.com
license = BSD
url = http://astropy.org/
edit_on_github = True
github_project = keflavich/higal_sedfitter
